# LGMR_EM

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/LGMR/: README.md
data/Orbital/: Insol-t-0-24000yr-day-1-365-lat-(-30)-meandaily-La04.txt  Insol-t-0-24000yr-day-1-365-lat-(0)-meandaily-La04.txt  Insol-t-0-24000yr-day-1-365-lat-(60)-meandaily-La04.txt  Insol-t-0-24000yr-day-152-243-lat-(-30)-meandaily-La04.txt  Insol-t-0-24000yr-day-152-243-lat-(-60)-meandaily-La04.txt  Insol-t-0-24000yr-day-152-243-lat-(30)-meandaily-La04.txt  Insol-t-0-24000yr-day-152-243-lat-(60)-meandaily-La04.txt  Insol-t-0-24000yr-day-172-lat-(60)-meandaily-La04.txt  Insol-t-0-24000yr-day-244-335-lat-(-30)-meandaily-La04.txt  Insol-t-0-24000yr-day-244-335-lat-(-60)-meandaily-La04.txt  Insol-t-0-24000yr-day-335-427-lat-(-30)-meandaily-La04.txt  Insol-t-0-24000yr-day-335-427-lat-(-60)-meandaily-La04.txt  Insol-t-0-24000yr-day-335-427-lat-(30)-meandaily-La04.txt  Insol-t-0-24000yr-day-335-427-lat-(60)-meandaily-La04.txt  Insol-t-0-24000yr-day-60-151-lat-(30)-meandaily-La04.txt  Insol-t-0-24000yr-day-60-151-lat-(60)-meandaily-La04.txt  La2004-Eccentricity-0-24.txt  La2004-Obliquity-0-24.txt  La2004-Precession-0-24.txt  README.md
data/Proxies/: 167-1019C_UK37_SST.tab  41586_2004_BFnature02903_MOESM2_ESM.xls  BS79-38_SST-age_alk.tab  D13882_SST-age_alk.tab  MD07-3088_SST.tab  (+8 more)
images/: README.md
notebooks/: em_decoposition.ipynb  proxies.ipynb
scripts/: em_of_ensmebles.py  kendall_tau_ensembles.py  other_proxies.py  proxies.py
src/: eigen_microstate.py
test/: test_em.py
(+5 files in other folders)
