[project]
name = "LGMR-EM"
dynamic = ["version"]
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26.2",
    "scipy>=1.11.4",
    "pandas>=2.1.4",
    "xarray>=2023.12.0",
    "cartopy>=0.22.0",
    "regionmask>=0.11.0",
    "matplotlib>=3.8.2",
    "eofs>=1.4.0",
    "h5netcdf>=1.3.0",
    "netCDF4>=1.6.5",
]

[project.optional-dependencies]
test = ["pytest>=7.4.3"]
jupyter = ["jupyter>=1.0.0", "ipykernel>=6.27.1", "ipympl>=0.9.3"]